// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic rendering case snapshot 1`] = `
.c0 {
  color: inherit;
  padding: 0.625em 1em;
  border-left: 0.25em solid transparent;
  margin: 0 0 1.25em;
  background: none;
}

<blockquote
  class="c0"
  style="color:orange;font-size:16px"
>
  some text1
  <span>
    some text2
  </span>
</blockquote>
`;

exports[`basic rendering case snapshot with theme 1`] = `
.c0 {
  color: red;
  padding: 0 1rem;
  border-left: 0.25em solid transparent;
  margin: 18;
  background: rgba(0,0,0,0.15);
}

<blockquote
  class="c0"
>
  some text1
  <span>
    some text2
  </span>
</blockquote>
`;
